--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     ]
   },
   "dependencies": {
+    "path-to-regexp": "^6.2.0",
     "postcss": "^8.4.14",
-    "qs": "6.9.7",
-    "path-to-regexp": "^6.2.0"
+    "qs": "6.9.7"
   },
   "devDependencies": {
     "@babel/generator": "^7.22.9",
@@ -79,6 +79,7 @@
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
     "js-yaml": "^4.1.0",
+    "katex": "^0.16.9",
     "lerna": "^6.6.2",
     "lint-staged": "^12.1.2",
     "magic-string": "^0.26.7",
