--- a/packages/amis-editor/package.json
+++ b/packages/amis-editor/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@webcomponents/webcomponentsjs": "^2.6.0",
     "amis-editor-core": "*",
+    "amis-theme-editor-helper": "*",
     "amis-postcss": "1.0.0",
     "i18n-runtime": "*",
     "lodash": "^4.17.15",
@@ -102,6 +103,7 @@
     "amis-core": "*",
     "amis-formula": "*",
     "amis-ui": "*",
+    "amis-theme-editor-helper": "*",
     "i18n-runtime": "*",
     "react": ">=16.8.6",
     "react-dom": ">=16.8.6"
