--- a/packages/amis-theme-editor-helper/tsconfig.json
+++ b/packages/amis-theme-editor-helper/tsconfig.json
@@ -10,5 +10,9 @@
     ]
   },
   "include": ["src/**/*"],
-  "references": [{"path": "../amis"}]
+  "references": [
+    {"path": "../amis"},
+    {"path": "../amis-ui"},
+    {"path": "../amis-core"}
+  ]
 }
