--- a/packages/amis-ui/package.json
+++ b/packages/amis-ui/package.json
@@ -61,6 +61,7 @@
     "rc-progress": "3.4.2",
     "react-color": "^2.19.3",
     "react-draggable": "^4.4.5",
+    "react-error-boundary": "^4.0.11",
     "react-hook-form": "7.39.0",
     "react-json-view": "1.21.3",
     "react-overlays": "5.1.1",
