--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "qs": "6.9.7"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@babel/generator": "^7.22.9",
     "@babel/parser": "^7.22.7",
     "@babel/traverse": "^7.22.8",
