--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "path-to-regexp": "^6.2.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@babel/generator": "^7.22.9",
     "@babel/parser": "^7.22.7",
     "@babel/traverse": "^7.22.8",
