feat: 主题编辑器渲染器开源 (#8820)
* feat: 主题编辑器渲染器开源

* 笔误

* 优化发布脚本

* 优化发布脚本

* 删除无用代码

* bugfix

* bugfix

* bugfix

* bugfix

---------

Co-authored-by: qinhaoyan <30946345+qinhaoyan@users.noreply.github.com>

--- a/packages/amis-editor/package.json
+++ b/packages/amis-editor/package.json
@@ -42,8 +42,8 @@
   "dependencies": {
     "@webcomponents/webcomponentsjs": "^2.6.0",
     "amis-editor-core": "*",
+    "amis-theme-editor-helper": "*",
     "amis-postcss": "1.0.0",
-    "amis-theme-editor": "*",
     "i18n-runtime": "*",
     "lodash": "^4.17.15",
     "mobx-state-tree": "^3.17.3"
@@ -102,8 +102,8 @@
     "amis": "*",
     "amis-core": "*",
     "amis-formula": "*",
-    "amis-theme-editor": "*",
     "amis-ui": "*",
+    "amis-theme-editor-helper": "*",
     "i18n-runtime": "*",
     "react": ">=16.8.6",
     "react-dom": ">=16.8.6"
