--- a/packages/amis-theme-editor-helper/tsconfig.json
+++ b/packages/amis-theme-editor-helper/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "./",
+    "rootDir": "./src",
     "typeRoots": [
       "../../types",
       "./node_modules/@types",
@@ -10,5 +10,9 @@
     ]
   },
   "include": ["src/**/*"],
-  "references": [{"path": "../amis"}, {"path": "../amis-theme-editor-helper"}]
+  "references": [
+    {"path": "../amis"},
+    {"path": "../amis-ui"},
+    {"path": "../amis-core"}
+  ]
 }
