--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   "dependencies": {
     "path-to-regexp": "^6.2.0",
     "postcss": "^8.4.14",
-    "qs": "6.9.7"
+    "qs": "6.9.7",
+    "react-error-boundary": "^4.0.11"
   },
   "devDependencies": {
     "@babel/generator": "^7.22.9",
