--- a/packages/amis/package.json
+++ b/packages/amis/package.json
@@ -76,7 +76,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/fontawesome-free": "5.15.4",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^14.1.0",
