--- a/packages/amis-core/package.json
+++ b/packages/amis-core/package.json
@@ -25,6 +25,7 @@
     "moment-timezone": "^0.5.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resize-observer-polyfill": "^1.5.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
     "rollup-plugin-auto-external": "^2.0.0",
