--- a/packages/amis-editor/package.json
+++ b/packages/amis-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amis-editor",
-  "version": "5.6.1",
+  "version": "6.0.0",
   "description": "amis 可视化编辑器",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -41,9 +41,9 @@
   ],
   "dependencies": {
     "@webcomponents/webcomponentsjs": "^2.6.0",
-    "amis-editor-core": "*",
-    "amis-theme-editor-helper": "*",
+    "amis-editor-core": "^6.0.0",
     "amis-postcss": "1.0.0",
+    "amis-theme-editor-helper": "*",
     "i18n-runtime": "*",
     "lodash": "^4.17.15",
     "mobx-state-tree": "^3.17.3"
@@ -102,8 +102,8 @@
     "amis": "*",
     "amis-core": "*",
     "amis-formula": "*",
-    "amis-ui": "*",
     "amis-theme-editor-helper": "*",
+    "amis-ui": "*",
     "i18n-runtime": "*",
     "react": ">=16.8.6",
     "react-dom": ">=16.8.6"
