--- a/packages/amis-editor-core/package.json
+++ b/packages/amis-editor-core/package.json
@@ -108,7 +108,8 @@
     "stylelint": "^14.11.0",
     "ts-loader": "^9.2.5",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "amis-theme-editor-helper": "2.0.22-beta.1"
   },
   "peerDependencies": {
     "amis": "*",
