--- a/packages/amis-editor/package.json
+++ b/packages/amis-editor/package.json
@@ -43,7 +43,6 @@
     "@webcomponents/webcomponentsjs": "^2.6.0",
     "amis-editor-core": "*",
     "amis-postcss": "1.0.0",
-    "amis-theme-editor": "*",
     "i18n-runtime": "*",
     "lodash": "^4.17.15",
     "mobx-state-tree": "^3.17.3"
@@ -96,7 +95,9 @@
     "ts-loader": "^9.2.5",
     "ts-node": "^10.5.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "amis-theme-editor": "2.0.11-beta.1",
+    "amis-theme-editor-helper": "2.0.11-beta.1"
   },
   "peerDependencies": {
     "amis": "*",
