解决属性问题

--- a/packages/amis-editor-core/package.json
+++ b/packages/amis-editor-core/package.json
@@ -120,5 +120,6 @@
     "i18n-runtime": "*",
     "react": ">=16.8.6",
     "react-dom": ">=16.8.6"
-  }
+  },
+  "gitHead": "61bb97aa7253e13ec6d4ad290f0dbda6fd3e449b"
 }
