chore: jest 使用 @swc/jest 编译，提升性能

--- a/packages/amis-ui/package.json
+++ b/packages/amis-ui/package.json
@@ -123,12 +123,7 @@
       "js"
     ],
     "transform": {
-      "\\.(ts|tsx)$": [
-        "ts-jest",
-        {
-          "diagnostics": false
-        }
-      ]
+      "^.+\\.(t|j)sx?$": "@swc/jest"
     },
     "setupFiles": [
       "jest-canvas-mock"
