--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "@babel/types": "^7.22.5",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@rollup/plugin-replace": "^5.0.1",
+    "@swc/core": "^1.3.107",
+    "@swc/helpers": "^0.5.3",
+    "@swc/jest": "^0.2.34",
     "@types/express": "^4.17.14",
     "@types/jest": "^28.1.0",
     "@types/js-yaml": "^4.0.5",
@@ -117,7 +120,9 @@
       "tsx",
       "js"
     ],
-    "preset": "ts-jest",
+    "transform": {
+      "^.+\\.(t|j)sx?$": "@swc/jest"
+    },
     "setupFiles": [
       "jest-canvas-mock"
     ],
