--- a/packages/amis-core/package.json
+++ b/packages/amis-core/package.json
@@ -85,12 +85,7 @@
       "js"
     ],
     "transform": {
-      "\\.(ts|tsx)$": [
-        "ts-jest",
-        {
-          "diagnostics": false
-        }
-      ]
+      "^.+\\.(t|j)sx?$": "@swc/jest"
     },
     "setupFiles": [
       "jest-canvas-mock"
