--- a/packages/amis-core/package.json
+++ b/packages/amis-core/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^28.1.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/react-is": "^18.2.4",
     "immutable": "^4.1.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
@@ -47,6 +48,7 @@
     "esm"
   ],
   "dependencies": {
+    "amis-formula": "*",
     "amis-formula": "^6.2.1",
     "classnames": "2.3.2",
     "file-saver": "^2.0.2",
