--- a/packages/amis-core/package.json
+++ b/packages/amis-core/package.json
@@ -49,7 +49,6 @@
   ],
   "dependencies": {
     "amis-formula": "*",
-    "amis-formula": "^6.2.1",
     "classnames": "2.3.2",
     "file-saver": "^2.0.2",
     "hoist-non-react-statics": "^3.3.2",
@@ -70,7 +69,8 @@
   "peerDependencies": {
     "amis-formula": "*",
     "react": ">=16.8.6",
-    "react-dom": ">=16.8.6"
+    "react-dom": ">=16.8.6",
+    "react-is": ">=16.8.6"
   },
   "jest": {
     "testEnvironment": "jsdom",
