--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "path-to-regexp": "^6.2.0",
     "postcss": "^8.4.14",
     "qs": "6.9.7",
-    "react-error-boundary": "^4.0.11"
+    "react-error-boundary": "^4.0.11",
     "smooth-signature": "^1.0.13"
   },
   "devDependencies": {
