--- a/packages/office-viewer/package.json
+++ b/packages/office-viewer/package.json
@@ -76,6 +76,7 @@
     "amis-formula": "^2.7.2",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
+    "puppeteer": "^22.8.0",
     "rollup": "^2.60.2",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.69.7",
