--- a/packages/amis-ui/package.json
+++ b/packages/amis-ui/package.json
@@ -55,6 +55,7 @@
     "mobx-state-tree": "^3.17.3",
     "moment": "^2.19.4",
     "monaco-editor": "0.30.1",
+    "pdfjs-dist": "3.11.174",
     "prop-types": "^15.6.1",
     "rc-input-number": "^7.4.0",
     "rc-menu": "^9.12.2",
@@ -65,7 +66,7 @@
     "react-intersection-observer": "9.5.2",
     "react-json-view": "1.21.3",
     "react-overlays": "5.1.1",
-    "react-pdf": "^7.7.1",
+    "react-pdf": "7.7.1",
     "react-textarea-autosize": "8.3.3",
     "react-transition-group": "4.4.2",
     "react-visibility-sensor": "5.1.1",
