chore: amis-core 产出存在 esm/node_modules 问题处理

--- a/packages/amis-core/package.json
+++ b/packages/amis-core/package.json
@@ -48,6 +48,7 @@
     "esm"
   ],
   "dependencies": {
+    "@rc-component/mini-decimal": "^1.0.1",
     "amis-formula": "^6.4.1",
     "classnames": "2.3.2",
     "file-saver": "^2.0.2",
