--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "deploy-gh-page": "sh ./deploy-gh-pages.sh",
     "build": "npm run build --workspaces",
     "build-esm": "npm run build-esm --workspaces",
-    "test": "npm test --workspaces",
+    "test": "npx jest --workspaces",
     "update-snapshot": "npm run update-snapshot --workspaces",
     "prepare": "husky install",
     "coverage": "jest --coverage --collectCoverage=v8",
@@ -56,7 +56,7 @@
     "@swc/helpers": "^0.5.3",
     "@swc/jest": "^0.2.34",
     "@types/express": "^4.17.14",
-    "@types/jest": "^28.1.0",
+    "@types/jest": "^29.0.3",
     "@types/js-yaml": "^4.0.5",
     "@types/marked": "^4.0.7",
     "@types/prismjs": "^1.26.0",
@@ -84,7 +84,7 @@
     "fis3-preprocessor-js-require-file": "^0.1.3",
     "github-markdown-css": "^5.5.1",
     "husky": "^8.0.0",
-    "jest": "^29.0.3",
+    "jest": "^29.10.0",
     "jest-environment-jsdom": "^29.0.3",
     "js-yaml": "^4.1.0",
     "katex": "^0.16.9",
@@ -96,8 +96,8 @@
     "plugin-react-i18n": "1.0.5",
     "postcss-scss": "^4.0.6",
     "prismjs": "^1.29.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
     "react-markdown": "^9.0.1",
     "react-overlays": "5.1.1",
     "react-syntax-highlighter": "^15.5.0",
