--- a/packages/amis-core/package.json
+++ b/packages/amis-core/package.json
@@ -35,8 +35,8 @@
     "typescript": "^4.6.4"
   },
   "scripts": {
-    "build": "npm run clean-dist && NODE_ENV=production rollup -c ",
-    "build-esm": "npm run clean-dist && NODE_ENV=production rollup -c rollup.esm.config.js",
+    "build": "npm run clean-dist && cross-env NODE_ENV=production rollup -c ",
+    "build-esm": "npm run clean-dist && cross-env NODE_ENV=production rollup -c rollup.esm.config.js",
     "dev": "rollup -c -w",
     "test": "jest",
     "update-snapshot": "jest --updateSnapshot",
@@ -49,6 +49,7 @@
   ],
   "dependencies": {
     "@rc-component/mini-decimal": "^1.0.1",
+    "cross-env": "^7.0.3",
     "amis-formula": "^6.8.0",
     "classnames": "2.3.2",
     "file-saver": "^2.0.2",
