--- a/packages/amis-editor-core/package.json
+++ b/packages/amis-editor-core/package.json
@@ -27,8 +27,8 @@
   },
   "scripts": {
     "test": "echo \"Warnings: no test specified\"",
-    "build": "npm run clean-dist && NODE_ENV=production rollup -c",
-    "build-esm": "npm run clean-dist && NODE_ENV=production rollup -c rollup.esm.config.js",
+    "build": "npm run clean-dist && cross-env NODE_ENV=production rollup -c",
+    "build-esm": "npm run clean-dist && cross-env NODE_ENV=production rollup -c rollup.esm.config.js",
     "clean-dist": "rimraf lib/* esm/*",
     "i18n:update": "npx i18n update --config=./i18nConfig.js",
     "i18n:translate": "npx i18n translate --config=./i18nConfig.js --l=en-US",
@@ -60,6 +60,7 @@
     "sortablejs": "^1.14.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
