--- a/package.json
+++ b/package.json
@@ -58,11 +58,12 @@
     "@swc/core": "^1.3.107",
     "@swc/helpers": "^0.5.3",
     "@swc/jest": "^0.2.34",
-    "@types/node": "^14.0.24",
+    "@types/classnames": "^2.3.4",
     "@types/express": "^4.17.14",
     "@types/jest": "^28.1.0",
     "@types/js-yaml": "^4.0.5",
     "@types/marked": "^4.0.7",
+    "@types/node": "^14.0.24",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
