--- a/packages/amis-core/package.json
+++ b/packages/amis-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amis-core",
-  "version": "6.9.0",
+  "version": "6.10.0",
   "description": "amis-core",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -49,9 +49,9 @@
   ],
   "dependencies": {
     "@rc-component/mini-decimal": "^1.0.1",
-    "cross-env": "^7.0.3",
-    "amis-formula": "*",
+    "amis-formula": "^6.10.0",
     "classnames": "2.3.2",
+    "cross-env": "^7.0.3",
     "file-saver": "^2.0.2",
     "hoist-non-react-statics": "^3.3.2",
     "lodash": "^4.17.15",
