fix(amis-ui): dependencies中引入video-react@0.15.0依赖，避免_thirds.scss中引入依赖报错的问题
安装依赖时，由于amis依赖video-react@0.15.0但amis-ui并没有依赖该包，由于是固定版本（没有^前缀）video-react被安装到amis/node_modules目录中，而没有被提升到根目录下的node_modules，从而导致构建依赖报错

--- a/packages/amis-ui/package.json
+++ b/packages/amis-ui/package.json
@@ -73,6 +73,7 @@
     "sortablejs": "1.15.0",
     "tinymce": "^6.1.2",
     "tslib": "^2.3.1",
+    "video-react": "0.15.0",
     "uncontrollable": "7.2.1"
   },
   "devDependencies": {
