--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/parser": "^7.22.7",
     "@babel/traverse": "^7.22.8",
     "@babel/types": "^7.22.5",
+    "@eslint/js": "^9.18.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@rollup/plugin-replace": "^5.0.1",
     "@swc/core": "^1.3.107",
@@ -72,6 +73,7 @@
     "amis-publish": "^1.0.5",
     "copy-to-clipboard": "3.3.1",
     "echarts": "5.4.0",
+    "eslint": "^9.18.0",
     "express": "^4.18.2",
     "fis-optimizer-terser": "^1.0.1",
     "fis-parser-sass": "^1.2.0",
@@ -111,6 +113,7 @@
     "rollup-pluginutils": "^2.8.2",
     "setprototypeof": "^1.2.0",
     "ts-jest": "^29.0.2",
+    "typescript-eslint": "^8.19.1",
     "vite": "^4.3.9",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-svgr": "^2.2.2",
