chore: amis-core 调整 esm 支持

--- a/packages/amis-core/package.json
+++ b/packages/amis-core/package.json
@@ -7,6 +7,16 @@
   "types": "lib/index.d.ts",
   "author": "fex",
   "license": "Apache-2.0",
+  "exports": {
+    ".": {
+      "require": "./lib/index.js",
+      "import": "./esm/index.js"
+    },
+    "./lib/*": {
+      "require": "./lib/*.js",
+      "import": "./esm/*.js"
+    }
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-json": "^4.1.0",
