--- a/packages/amis-core/package.json
+++ b/packages/amis-core/package.json
@@ -59,7 +59,7 @@
   ],
   "dependencies": {
     "@rc-component/mini-decimal": "^1.0.1",
-    "amis-formula": "^6.12.0-alpha.0",
+    "amis-formula": "*",
     "classnames": "2.3.2",
     "cross-env": "^7.0.3",
     "file-saver": "^2.0.2",
