--- a/packages/amis-editor/package.json
+++ b/packages/amis-editor/package.json
@@ -41,7 +41,7 @@
   ],
   "dependencies": {
     "@webcomponents/webcomponentsjs": "^2.6.0",
-    "amis-editor-core": "^6.12.0-alpha.0",
+    "amis-editor-core": "*",
     "amis-postcss": "1.0.0",
     "amis-theme-editor-helper": "*",
     "i18n-runtime": "*",
