--- a/packages/amis-ui/package.json
+++ b/packages/amis-ui/package.json
@@ -36,8 +36,8 @@
   },
   "dependencies": {
     "@rc-component/mini-decimal": "^1.0.1",
-    "amis-core": "^6.12.0-alpha.0",
-    "amis-formula": "^6.12.0-alpha.0",
+    "amis-core": "*",
+    "amis-formula": "*",
     "animate.css": "4.1.1",
     "classnames": "2.3.2",
     "codemirror": "^5.63.0",
