--- a/packages/amis/package.json
+++ b/packages/amis/package.json
@@ -37,8 +37,8 @@
     }
   ],
   "dependencies": {
-    "amis-core": "^6.12.0-alpha.0",
-    "amis-ui": "^6.12.0-alpha.0",
+    "amis-core": "*",
+    "amis-ui": "*",
     "attr-accept": "2.2.2",
     "blueimp-canvastoblob": "2.1.0",
     "classnames": "2.3.2",
