--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "path-to-regexp": "^6.2.0",
     "postcss": "^8.4.14",
     "qs": "6.9.7",
+    "smooth-signature": "^1.0.15",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
