--- a/packages/amis-ui/package.json
+++ b/packages/amis-ui/package.json
@@ -3,7 +3,7 @@
   "main": "lib/index.js",
   "module": "esm/index.js",
   "types": "lib/index.d.ts",
-  "version": "6.12.0-alpha.0",
+  "version": "6.12.0",
   "description": "",
   "scripts": {
     "build": "npm run clean-dist && cross-env NODE_ENV=production rollup -c ",
