--- a/packages/amis-core/package.json
+++ b/packages/amis-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amis-core",
-  "version": "6.12.0-alpha.0",
+  "version": "6.12.0",
   "description": "amis-core",
   "main": "lib/index.js",
   "module": "esm/index.js",
