--- a/packages/amis/package.json
+++ b/packages/amis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amis",
-  "version": "6.12.0-alpha.0",
+  "version": "6.12.0",
   "description": "一种MIS页面生成工具",
   "main": "lib/index.js",
   "module": "esm/index.js",
