--- a/packages/amis-core/package.json
+++ b/packages/amis-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amis-core",
-  "version": "6.12.0",
+  "version": "6.13.0-beta.8",
   "description": "amis-core",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -59,7 +59,7 @@
   ],
   "dependencies": {
     "@rc-component/mini-decimal": "^1.0.1",
-    "amis-formula": "*",
+    "amis-formula": "^6.13.0-beta.8",
     "classnames": "2.3.2",
     "cross-env": "^7.0.3",
     "file-saver": "^2.0.2",
