--- a/packages/amis-ui/package.json
+++ b/packages/amis-ui/package.json
@@ -3,7 +3,7 @@
   "main": "lib/index.js",
   "module": "esm/index.js",
   "types": "lib/index.d.ts",
-  "version": "6.12.0",
+  "version": "6.13.0-beta.8",
   "description": "",
   "scripts": {
     "build": "npm run clean-dist && cross-env NODE_ENV=production rollup -c ",
@@ -36,8 +36,8 @@
   },
   "dependencies": {
     "@rc-component/mini-decimal": "^1.0.1",
-    "amis-core": "*",
-    "amis-formula": "*",
+    "amis-core": "^6.13.0-beta.8",
+    "amis-formula": "^6.13.0-beta.8",
     "animate.css": "4.1.1",
     "classnames": "2.3.2",
     "codemirror": "^5.63.0",
