fix: 修复 amis-ui esm 版本主题文件配置错误

--- a/packages/amis-ui/package.json
+++ b/packages/amis-ui/package.json
@@ -28,7 +28,10 @@
       "import": "./esm/index.js"
     },
     "./scss/": "./scss/",
-    "./lib/themes/": "./lib/themes/",
+    "./lib/themes/": {
+      "require": "./lib/themes/",
+      "import": "./esm/themes/"
+    },
     "./lib/*": {
       "require": "./lib/*.js",
       "import": "./esm/*.js"
