fix: 修复 amis-ui esm 版本主题文件配置错误

--- a/packages/amis-ui/package.json
+++ b/packages/amis-ui/package.json
@@ -29,6 +29,7 @@
     },
     "./scss/": "./scss/",
     "./lib/themes/": {
+      "style": "./lib/themes/",
       "require": "./lib/themes/",
       "import": "./esm/themes/"
     },
